--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.3.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-plugin-gradient": "^0.6.1",
+    "d3": "^7.9.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -46,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
